Update .gitignore to exclude sensitive config files
Add entries to ignore configuration files that may contain secrets.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ dlldata.c
 BenchmarkDotNet.Artifacts/
 
 # .NET Core
+# Arquivos de configurações que podem conter segredos
+appsettings.Development.json
 project.lock.json
 project.fragment.lock.json
 artifacts/
